--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/styled-components": "^5.1.7",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.13",
     "open-browser-plugin": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
